solved part of the issues with docker mapping volumes

--- a/pcapcopier-v5/python-test-v1/Dockerfile
+++ b/pcapcopier-v5/python-test-v1/Dockerfile
@@ -9,6 +9,8 @@ EXPOSE 2022
 COPY entrypoint.sh /
 RUN mkdir -p /opt/pcaps
 VOLUME ["/opt/pcaps","/opt/pcaps"]
+VOLUME ["/home/silentdefense","/home/silentdefense"]
+
 RUN rm -rf /var/cache/apk/*
 RUN adduser -s /bin/bash -D -G wheel -u 1000 -g -m silentdefense
 RUN echo 'silentdefense:$6$3.npOCuURBMHmyeM$ioEGACbo24W7yjqAv8HDWRAtcGFjgB3ZnYoSR8HBrl8NXyrQ2tcniZbuZgB7oXCzvhcxdOjZqlUkEe3jH3Sv61' | chpasswd -e
