--- a/pcapcopier-v6/docker-compose.yml
+++ b/pcapcopier-v6/docker-compose.yml
@@ -1,10 +1,11 @@
 services:
   pcapcopier:
-    #ports:
-    #  - "2022:2022"
+    ports:
+      - "2022:2022"
     volumes:
       - "/home/silentdefense:/home/silentdefense"
-      - "/opt:/opt"
+      - "/var/log/pcapcopier:/var/log/pcapcopier"
+      - "/opt/nids-docker/custom/pcaps/sniff_offline/:/opt/nids-docker/custom/pcaps/sniff_offline/"
     container_name: pcapcopier
     image: pcapcopier
     restart: unless-stopped
