--- a/pcapcopier_v1.8/pcapcopier-compose.yml
+++ b/pcapcopier_v1.8/pcapcopier-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "127.0.0.1:2022:2022"
     volumes:
-      - "/opt/pcapcopier/localstorage/home/silentdefense:/home/silentdefense"
-      - "/var/log/pcapcopier:/var/log/pcapcopier"
+      - "/opt/pcapcopier/log:/var/log/pcapcopier"
+      - "/opt/pcapcopier/persistent/home/silentdefense:/home/silentdefense"
       - "/opt/nids-docker/custom/pcaps/sniff_offline/:/opt/nids-docker/custom/pcaps/sniff_offline/"
     restart: unless-stopped
